# ark-ec-vrfs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
data/: bandersnatch_ed_sha512_ell2_ietf_vectors.json  bandersnatch_ed_sha512_ell2_pedersen_vectors.json  bandersnatch_ed_sha512_ell2_ring_vectors.json  bandersnatch_sw_sha512_tai_ietf_vectors.json  bandersnatch_sw_sha512_tai_pedersen_vectors.json  bandersnatch_sw_sha512_tai_ring_vectors.json  ed25519_sha512_tai_ietf_vectors.json  ed25519_sha512_tai_pedersen_vectors.json  ed25519_sha512_tai_vectors.json  ietf-vector-schema.py  secp256_sha256_tai_ietf_vectors.json  secp256_sha256_tai_ietf_vectors_rfc_9381.json  secp256_sha256_tai_vectors_rfc_9381.json  secp256r1_sha256_tai_pedersen_vectors.json  vectors-generate.sh  vectors-print.py
data/vectors/: baby-jubjub_sha-512_tai_ietf.json  baby-jubjub_sha-512_tai_pedersen.json  baby-jubjub_sha-512_tai_ring.json  bandersnatch_ed_sha512_ell2_ietf.json  bandersnatch_ed_sha512_ell2_pedersen.json  bandersnatch_ed_sha512_ell2_ring.json  bandersnatch_sha-512_ell2_ietf.json  bandersnatch_sha-512_ell2_pedersen.json  bandersnatch_sha-512_ell2_ring.json  bandersnatch_sha512_ell2_ietf.json  bandersnatch_sha512_ell2_pedersen.json  bandersnatch_sha512_ell2_ring.json  bandersnatch_sw_sha-512_tai_ietf.json  bandersnatch_sw_sha-512_tai_pedersen.json  bandersnatch_sw_sha-512_tai_ring.json  bandersnatch_sw_sha512_tai_ietf.json  bandersnatch_sw_sha512_tai_pedersen.json  bandersnatch_sw_sha512_tai_ring.json  ed25519_sha-512_tai_ietf.json  ed25519_sha-512_tai_pedersen.json  ed25519_sha512_tai_ietf.json  ed25519_sha512_tai_pedersen.json  jubjub_sha-512_tai_ietf.json  jubjub_sha-512_tai_pedersen.json  jubjub_sha-512_tai_ring.json  secp256_sha256_tai_ietf.json  secp256_sha256_tai_ietf_rfc_9381.json  secp256r1_sha-256_tai_ietf.json  secp256r1_sha-256_tai_pedersen.json  secp256r1_sha256_tai_pedersen.json  testing_sha-256_tai_ietf.json  testing_sha-256_tai_pedersen.json
src/: codec.rs  ietf.rs  lib.rs  pedersen.rs  ring.rs  suites.rs  testing.rs  utils.rs
src/arkworks/: elligator2.rs  mod.rs  te_sw_map.rs
src/suites/: baby_jubjub.rs  bandersnatch.rs  bandersnatch_sw.rs  ed25519.rs  jubjub.rs  mod.rs  secp256.rs  secp256r1.rs  testing.rs
src/utils/: common.rs  elligator2.rs  mod.rs  te_sw_map.rs
