[package]
name = "ark-ec-vrfs"
version = "0.1.0"
edition = "2021"
authors = [ "Davide Galassi" ]
description = "EC VRFs with arkworks"
repository = "https://github.com/davxy/ark-ecvrf"

[dependencies]
ark-ec = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-std = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
zeroize = { version = "1.8", default-features = false }
digest = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rayon = { version = "1.10", default-features = false, optional = true }
hmac = {version = "0.12", default-features = false, optional = true }
# Waiting for crates.io
ring-proof = { package = "ring", git = "https://github.com/davxy/ring-proof", branch = "extended", default-features = false, optional = true }
# Curves
ark-secp256r1 = { version = "0.4.0", default-features = false, optional = true }
ark-ed25519 = { version = "0.4.0", default-features = false, optional = true }
ark-ed-on-bls12-381-bandersnatch = { version = "0.4.0", default-features = false, optional = true }
ark-bls12-381 = { version = "0.4.0", default-features = false, optional = true }

[dev-dependencies]
ark-ed25519 = "0.4"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.2.6", features = ["serde"] }

[features]
default = [ "std" ]
std = [
  "ark-std/std",
  "ark-std/getrandom",
  "ark-ec/std",
  "ring-proof?/std",
]
secp256r1 = [
  "ark-secp256r1",
  "rfc-6979",
]
ed25519 = [ "ark-ed25519" ]
bandersnatch = [ "ark-ed-on-bls12-381-bandersnatch" ]
ring = [
  "bandersnatch",
  "ring-proof",
  "ark-bls12-381/curve",
]
rfc-6979 = [ "hmac" ]
full = [
  "secp256r1",
  "ed25519",
  "bandersnatch",
  "ring",
]

# Optimizations
parallel = [
  "ark-ec/parallel",
  "ark-ff/parallel",
  "ark-std/parallel",
  "ring-proof?/parallel",
  "rayon",
]
asm = [
  "ark-ff/asm",
  "ring-proof?/asm"
]

# Deterministic ring-proof (unsafe)
test-vectors = [
  "ring-proof?/test-vectors"
]
