[package]
name = "ark-ec-vrfs"
version = "0.1.0"
edition = "2021"
authors = [ "Davide Galassi <davxy@datawok.net>" ]
license = "MIT"
description = "Elliptic curve VRF with additional data"
keywords = [ "cryptography", "vrf", "ring-vrf", "zk-snark" ]
repository = "https://github.com/davxy/ark-ecvrf"

[dependencies]
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-std = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
zeroize = { version = "1.8", default-features = false }
digest = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rayon = { version = "1.10", default-features = false, optional = true }
hmac = {version = "0.12", default-features = false, optional = true }
ring-proof = { package = "w3f-ring-proof", version = "0.0.2", default-features = false, optional = true }
# Curves
ark-secp256r1 = { version = "0.5.0", default-features = false, optional = true }
ark-ed25519 = { version = "0.5.0", default-features = false, optional = true }
ark-ed-on-bls12-381-bandersnatch = { version = "0.5.0", default-features = false, optional = true }
ark-bls12-381 = { version = "0.5.0", default-features = false, optional = true }

[dev-dependencies]
ark-ed25519 = "0.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.2.6", features = ["serde"] }

[features]
default = [ "std" ]
std = [
  "ark-std/std",
  "ark-ec/std",
  "ring-proof?/std",
]
# Curves
ed25519 = [ "ark-ed25519" ]
bandersnatch = [ "ark-ed-on-bls12-381-bandersnatch", "ark-bls12-381/curve" ]
secp256r1 = [ "ark-secp256r1", "rfc-6979" ]
# Miscellanea
ring = [ "ring-proof" ]
rfc-6979 = [ "hmac" ]
full = [
  "secp256r1",
  "ed25519",
  "bandersnatch",
  "ring",
]
# Optimizations
parallel = [
  "ark-ec/parallel",
  "ark-ff/parallel",
  "ark-std/parallel",
  "ring-proof?/parallel",
  "rayon",
]
asm = [ "ark-ff/asm", "ring-proof?/asm" ]
# Deterministic, no-zk, ring-proof (unsafe)
test-vectors = [ "ring-proof?/test-vectors" ]
