[package]
name = "ark-ec-vrfs"
version = "0.1.3"
edition = "2021"
authors = [ "Davide Galassi <davxy@datawok.net>" ]
license = "MIT"
description = "DEPRECATED: This crate has been superseeded by `ark-vrf`."
keywords = [ "cryptography", "vrf", "ec-vrf", "ring-vrf", "zk-snark" ]
repository = "https://github.com/davxy/ark-ec-vrfs"

[dependencies]
ark-vrf = { version = "0.1.0", default-features = false }

[features]
default = [ "std", "full" ]
std = [ "ark-vrf/std" ]
full = [ "ark-vrf/full" ]
